2008-10-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Move more into the
	base class. Implement directive name completion.

	* MonoDevelop.AspNet.Parser/Directive.cs: Remove unused parameters.

2008-10-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Parser.Internal/AspParser.cs: Improve error
	reporting.

2008-10-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Track API. Work
	around some bugs in directive completion until they're fixed
	properly.

	* Makefile.am:
	* AspNetAddIn.mdp: Updated.

	* MonoDevelop.AspNet.Completion/SimpleLists.cs: Add utility methods for
	simple completion lists with default values.

	* MonoDevelop.AspNet.Parser/Directive.cs: Add attribute completion for
	all directives. Some work towards completing directive names and
	values.

	* MonoDevelop.AspNet.Parser/AspNetParsedDocument.cs: Add a WebSubType
	property.

2008-10-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Parser/Directive.cs: Add more attributes.

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Remove code that's
	moved to base class.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Parser/Directive.cs:
	* MonoDevelop.Html/HtmlCompletionDataProvider.cs:
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.Html/DocTypeCompletionDataProvider.cs: Track APIs.

	* Makefile.am:
	* AspNetAddIn.mdp: Updated.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Html/DocTypeCompletionData.cs:
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Parser/SuggestedHandlerCompletionData.cs: Track
	CompletionData API.

2008-10-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Parser/Directive.cs: Track API.

	* Makefile.am:
	* AspNetAddIn.mdp: Updated.

	* MonoDevelop.AspNet.Parser/SimpleCompletionData.cs: Moved to